Own final read through

--- a/Conclusion/Conclusion.tex
+++ b/Conclusion/Conclusion.tex
@@ -52,7 +52,7 @@ analysis to integrated luminosities of $300\,\invfb$ and $3000\,\invfb$ \cite{HT
 shown in figure \ref{fig:mssm_projection_fig}. Even with an integrated luminosity of
 $3000\,\invfb$ it is not possible to exclude the full \mA-\tanb~plane of this scenario,
 as the branching ratio of $\PHiggsps/\PHiggs$ into di-tau pairs 
-is very low in the high-\mA and low-tanb~corner. This region can be accessed 
+is very low in the high-\mA~and low-tanb~corner. This region can be accessed 
 via searches for the $\PHiggsps/\PHiggs \rightarrow \Ptop\APtop$ decay, which
 has an enhanced branching ratio in this region. To fully cover this
 parameter space it will therefore start to become more and more
