--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -6,7 +6,7 @@
 
 The \acf{LHC} \cite{lhc-machine}  is a $26.7\,\kilo\metre$ long synchrotron hadron accelerator and collider below the surface of the 
 Franco-Swiss border near Geneva. It
-is installed in the tunnel that previously hosted the Large Electron Positron accelerator \cite{lep-design}
+is installed in the tunnel that previously hosted the \acf{LEP} accelerator \cite{lep-design}
 that was operated by \acf{CERN} between 1989 and 2000.
 
 The \ac{LHC} was designed to collide two beams of protons %with each other 
@@ -84,7 +84,7 @@ by running year \cite{cms-lumi-public}.}
 
 The data-taking efficiency of CMS is not 100\%, as parts of the detector might be
 switched off while collisions are ongoing. In 2012 the data-taking 
-efficiency was 93.5\%, in 2015 it was 90.3\% and in 2016 it was 92.0\%
+efficiency was 93.5\%, in 2015 it was 90.3\% and in 2016 it was 92.0\%.
 From all of the data that is recorded only a subset is used for analysis. Data is 
 certified as good for use in analyses if it is known that all relevant sub-detectors
 were functioning correctly. In 2012 the certification efficiency was 90.4\%, 
@@ -144,12 +144,12 @@ iron return yoke of the solenoid.
 For the measurement of physical quantities \ac{CMS} uses a coordinate
 system with the origin centred at the nominal collision point
 inside the experiment. The $y$ axis points vertically upward, the $x$ axis
-points radially inward toward the centre of the \ac{LHC} ring. The $z$ axis
+points radially inward toward the centre of the \ac{LHC} ring. The \mbox{$z$ axis}
 points along the beam direction. As such the transverse momentum and energy, 
 \pT~and \ET, are defined by the $x$- and $y$-components of the momentum and energy.
 The azimuthal angle $\phi$ is measured in the $x$-$y$ plane with respect to the $x$ axis  
 and the polar angle $\theta$ is measured with respect to the $z$ axis. A coordinate
-more frequently used than the polar angle is the pseudorapidity $\eta = -\ln{[\tan{\frac{\theta}{2}}]}$.%Look up: differences in eta are lorentz-invariant
+more frequently used than the polar angle is the pseudorapidity $\eta = -\ln{[\tan{\frac{\theta}{2}}]}$. %Look up: differences in eta are lorentz-invariant
 Distances in the $\eta$-$\phi$ plane are given as $\Delta R = \sqrt{(\Delta\eta)^2+(\Delta\phi)^2}$. 
 
 The subsystems of the \ac{CMS} detector will be described in more detail in the 
@@ -213,14 +213,14 @@ provide four measurements of the $r$-$\phi$ position with a resolution of $23$--
 The \ac{TIB} and \ac{TID} are surrounded by the \ac{TOB}, which consists of six layers of silicon strip sensors extending
 up to an outer radius of $116\,\cm$ and up to $z=\pm\,118\,\cm$. The strips in the \ac{TOB} are $500\,\micron$ thick, 
 around $25\,\cm$ long and $122$--$183\,\micron$ 
-wide providing 6 measurements of $r$ and $\phi$, with a resolution
+wide providing six measurements of $r$ and $\phi$, with a resolution
 of $35$--$53\,\micron$. Beyond the $z$ range covered by the \ac{TOB}, coverage is provided by the \ac{TEC},
 consisting of nine disks of strips. In the \ac{TEC} the strip thickness ranges from $320$--$500\,\micron$ and 
 the the strip width ranges from $97$--$184\,\micron$. %FIXME: look up why
 This part of the system provides up to nine $\phi$ measurements.
 
 Some of the strip modules in the detector carry a second strip detector module mounted back-to-back with a stereo angle %FIXME WTF?
-of $100\,$mrad, in order to provide measurements of the $z$ coordinate in the barrel. This is achieved with a resolution of $230$--$530\,\micron$.
+of $100\,$mrad, in order to provide measurements of the \mbox{$z$ coordinate} in the barrel. This is achieved with a resolution of $230$--$530\,\micron$.
 
 The pixel tracker will be upgraded during the extended year-end technical stop in late 2016-early 2017. This upgrade is needed to
 maintain the performance of the tracker as the pileup increases over the next few years \cite{cms-pixel-upgrade}. %or just replaced?
@@ -230,7 +230,7 @@ maintain the performance of the tracker as the pileup increases over the next fe
 The \ac{ECAL} \cite{cms-jinst} is a hermetic homogeneous calorimeter
 made of nearly $76\,000$ lead tungstate (PbWO$_4$) crystals. It has very
 good energy resolution, is highly granular and has a fast response, all qualities 
-which are needed to be able to detect $\PHiggslight\rightarrow \Pphoton\Pphoton$ decays.
+which are needed to be able to detect $\PHiggs\rightarrow \Pphoton\Pphoton$ decays.
 
 The choice of lead tungstate crystals is motivated by the
 radiation-hardness of the material in combination with its
@@ -292,7 +292,7 @@ To preserve the energy resolution the crystals and
 photodetectors need to be kept stable within $18\pm 0.05^{\circ}$C
 as the number of scintillation photons emitted by the crystals,
 and the amplification of the photodetectors, are temperature dependent.
-This nominal operating temperature, is ensured by 
+This nominal operating temperature is ensured by 
 supplying the detector with water at the same temperature.
 
 The energy resolution of the \ac{ECAL} can be parameterised as
@@ -350,7 +350,7 @@ sufficient to identify, for example, late-starting showers. The \ac{HO}, sitting
 outside of the magnet and using the coil as an additional absorber, extends the 
 thickness to at least 11.8 interaction lengths. 
 As in the \ac{HB} the active material of the \ac{HO} consists of plastic scintillator tiles which roughly
-map on the granularity of the tiles in the \ac{HB}, and are read out via the same mechanism. %by feeding the light
+map the granularity of the tiles in the \ac{HB}, and are read out via the same mechanism. %by feeding the light
 %to a hybrid photodiode via wavelength-shifting fibres.
 %WTF: wavelength-shifting fibres
 
@@ -386,7 +386,7 @@ next few years \cite{cms-hcal-upgrade}.
 Accurate muon identification is one of the requirements of the \ac{CMS} 
 experiment. High muon identification efficiency and precise muon momentum 
 resolution are key to the success of the experiment, as muons are
-very important for the detection of $\PHiggslight\rightarrow \PZ\PZ \rightarrow 4\ell$ decays. In addition to that,
+very important for the detection of $\PHiggs\rightarrow \PZ\PZ \rightarrow 4\ell$ decays. In addition to that,
 muons appear in the final states of many of the \ac{BSM} signatures the experiment is searching for.
 
 The \ac{CMS} muon system \cite{cms-jinst} is composed of three sub-systems which
@@ -436,7 +436,7 @@ with six gaseous chambers bounded by cathode plates. Sensitive
 strips are placed on these plates in the 
 radial direction, to measure the muon coordinate in the  $r$--$\phi$ plane.
 Anode wires between the cathode planes
-run along the $\phi$ direction and provide a measurement of
+run along the \mbox{$\phi$ direction} and provide a measurement of
 $\eta$. The resolution of the $r$--$\phi$ measurement is $40$--$120\,\micron$ \cite{cms-muon-7tev}.
 
 In addition to the \acp{DT} and \acp{CSC}, the \acp{RPC} provide coverage
@@ -449,7 +449,7 @@ a result of this the \acp{RPC} are used as an independent muon trigger
 which can correctly identify the beam crossing from which the muon
 originated.
 
-To obtain precise muon momentum resolution information from 
+To obtain precise muon momentum resolution, information from 
 the tracker hits has to be combined with measurements in the
 muon stations. The momentum resolution of the muon system
 alone is 9\% for muons with \pT~up to $200\,\GeV$, and varies with $\eta$ 
@@ -466,7 +466,7 @@ not be feasible to write every single event, with a size of around 1 MB, to tape
 system is used to select events of interest, which reduces the rate
 at which events are stored to  $\mathcal{O}(1 \text{ kHz})$.
 
-The trigger system consists of two stages: the \ac{L1} trigger and the \ac{HLT}. which only makes use of
+The trigger system consists of two stages: the \ac{L1} trigger and the \ac{HLT}. 
 The \ac{L1} trigger only makes use of front-end electronics and reduces the event rate 
 from $40\,$MHz to around $100\,$kHz. The \ac{HLT} 
 runs on a computer farm with around $13\,000$ CPU cores \cite{cms-trigger}.
