--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -118,7 +118,7 @@ neutral currents.
 %b \end{pmatrix}.
 %\end{equation}
 The SU(2) part of the symmetry is built from the weak
-isospin generators $I_{1,2,3} = \frac{1}{2}\sigma_{1,2,3}$,
+isospin generators \mbox{$I_{1,2,3} = \frac{1}{2}\sigma_{1,2,3}$},
 where $\sigma_i$ are the Pauli spin matrices. The U(1)
 symmetry comes from the weak hypercharge generator $Y$, which
 is related to weak isospin and electric charge as
@@ -283,7 +283,7 @@ Searches for the Higgs boson at the \ac{LEP} collider did not lead
 to its observation. However, masses below $114.4\,\GeV$ were excluded at the 95\% \ac{CL} \cite{LEP-Higgs},
 providing a lower search limit. Subsequent searches at the 
 Tevatron also did not lead to the discovery of the Higgs boson, but did exclude 
-an additional mass range of $140$--$186\,\GeV$ at the 95\% \ac{CL} \cite{TEV-Higgs}.
+an additional mass range of $140$--$186\,\GeV$ at the \mbox{95\% \ac{CL} \cite{TEV-Higgs}}.
 
 On the fourth of July 2012 the ATLAS and CMS Collaborations
 announced the discovery of a boson with a mass of around $125\,\GeV$ \cite{HDiscoveryATLAS,HDiscoveryCMS}.
@@ -468,7 +468,7 @@ one of the Higgs boson masses, conventionally chosen as \mA.
 The masses of the neutral scalars \PHiggs and \PHiggslight are the eigenvalues  
 of $\mathcal{M}_{\text{tree}}^2$,
 \begin{equation}\label{eqn:scalarmass}
-m_{\PHiggs,\PHiggslight}^2 = \frac{1}{2}[m_{\PHiggsps}^2+m_{\PZ}^2 \pm \sqrt{(m_{\PHiggsps}^2+m_{\PZ}^2)^2-4m_{\PZ}^2m_{\PHiggsps}^2\text{cos}^2 2\beta}].
+m_{\PHiggs,\PHiggslight}^2 = \frac{1}{2}[m_{\PHiggsps}^2+m_{\PZ}^2 \pm \sqrt{(m_{\PHiggsps}^2+m_{\PZ}^2)^2-4m_{\PZ}^2m_{\PHiggsps}^2\text{cos}^2 2\beta}~].
 \end{equation}
 The masses of the charged Higgs bosons are
 \begin{equation}\label{mssm_chargedhigss_mass}
@@ -727,8 +727,8 @@ calculations in reference \cite{YR3}.}
 \label{fig:mhmodp_xs}
 \end{figure}
 
-Figure \ref{fig:mhmodp_br} shows the branching ratio of the \PHiggs and \PHiggsps 
-into $\tau\tau$. The branching ratios into $\tau\tau$ are enhanced, especially at
+Figure \ref{fig:mhmodp_br} shows the branching ratios of the \PHiggs and \PHiggsps 
+bosons into $\tau\tau$. The branching ratios into $\tau\tau$ are enhanced, especially at
 high \tanb, showing how this decay channel is useful for MSSM Higgs boson searches.
 
 \begin{figure}[h!]
@@ -749,7 +749,7 @@ The mass of the light Higgs boson in the \ac{MSSM} is said to
 be compatible with $125\,\GeV$ if the light Higgs boson mass lies within 
 $\pm 3\,\GeV$ of $125\,\GeV$. This mass window
 corresponds to the theoretical uncertainty on the \ac{MSSM} prediction for \mh.
-A large area of the \mA-\tanb~plane in the $m_{\PHiggslight}^{\text{mod+}}$ 
+A large area of the \mbox{\mA-\tanb}~plane in the $m_{\PHiggslight}^{\text{mod+}}$ 
 scenario contains a light Higgs boson with a mass compatible with
 $125\,\GeV$. However, at low values of \tanb~this is not the case.
 This is illustrated in figure \ref{fig:mhmodp_mh}a, where the mass of the light Higgs
@@ -778,14 +778,6 @@ Two approches for the definition of an \ac{MSSM} scenario that gives
 access to the low \tanb~region have been developed, they will be
 discussed in the next sections.
 
-\subsubsection{The low-\tanb~scenario}
-\label{sec:theory_BSM_model_lowtb}
-In the low-\tanb~scenario \cite{Hein-low-tb-high,MSSM-lowtanb}, the SUSY parameters entering
-the radiative corrections are tuned to obtain a light 
-Higgs boson mass of around $125\,\GeV$ in most of the \mA-\tanb~plane considered.
-Figure \ref{fig:mhmodp_mh}b shows that, apart from in a corner of \tanb~$=1$--$4$ and 
-\mA~$=150$--$250\,\GeV$, \mh~is compatible with $125\,\GeV$.
-
 \begin{figure}[h!]
 \begin{center}
 \subfloat[$m_{\PHiggslight}^{\text{mod}+}$ scenario]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/mh_mhmodp.pdf}}
@@ -800,6 +792,15 @@ part of the \mA-\tanb~plane in the $m_{\PHiggslight}^{\text{mod+}}$ scenario, ex
 the mass of the light Higgs boson is compatible with $125\,\GeV$ nearly everywhere. These values are based on the calculations in reference \cite{YR3}.}
 \label{fig:mhmodp_mh}
 \end{figure}
+
+\subsubsection{The low-\tanb~scenario}
+\label{sec:theory_BSM_model_lowtb}
+In the low-\tanb~scenario \cite{Hein-low-tb-high,MSSM-lowtanb}, the SUSY parameters entering
+the radiative corrections are tuned to obtain a light 
+Higgs boson mass of around $125\,\GeV$ in most of the \mbox{\mA-\tanb}~plane considered.
+Figure \ref{fig:mhmodp_mh}b shows that, apart from in a corner of \tanb~$=1$--$4$ and 
+\mA~$=150$--$250\,\GeV$, \mh~is compatible with $125\,\GeV$.
+
 %\begin{figure}[h!]
 %\begin{center}
 %\includegraphics[width=0.5\textwidth]{./Theory/Figures/mh_lowtbhigh.png}
@@ -927,7 +928,7 @@ pattern as in other MSSM scenarios, with large branching ratios at high \tanb.
 \label{sec:theory_BSMH_status}
 With the data collected by the \ac{LHC}
 experiments up to the end of 2012 many searches for \ac{BSM} Higgs
-bosons were performed. Figure \ref{fig:bsm_summary} shows the interpetations
+bosons were performed. Figure \ref{fig:bsm_summary} shows the interpretations
 of different searches performed with the \acs{CMS} detector during this period
 in the $m_{\PHiggslight}^{\text{mod+}}$ (figure~\ref{fig:bsm_summary}a)
 and hMSSM (figure~\ref{fig:bsm_summary}b) scenarios. The direct search for heavier Higgs bosons decaying into pairs
