--- a/backmatter.tex
+++ b/backmatter.tex
@@ -10,62 +10,62 @@
 %\listoffigures
 %\listoftables
 
-\chapter*{List of Acronyms}
-\addcontentsline{toc}{chapter}{List of Acronyms}
-\begin{acronym}[CERN]
-\acro{EM}[EM]{electromagnetic}
-\acro{QFT}[QFT]{quantum field theory}
-\acro{QCD}[QCD]{quantum chromodynamics}
-\acro{QED}[QED]{quantum electrodynamics}
-\acro{LEP}[LEP]{Large Electron-Positron}
-\acro{VBF}[VBF]{vector boson fusion}
-\acro{MC}[MC]{Monte Carlo}
-\acro{CKM}[CKM]{Cabibbo-Kobayashi-Maskawa}
-\acro{CMS}[CMS]{Compact Muon Solenoid}
-\acro{LHC}[LHC]{Large Hadron Collider}
-\acro{CERN}[CERN]{the European Organisation for Nuclear Research }
-\acro{PS}[PS]{Proton Synchrotron}
-\acro{SPS}[SPS]{Super Proton Synchrotron}
-\acro{PSB}[PSB]{Proton Synchrotron Booster}
-\acro{LS1}[LS1]{Long Shutdown 1}
-\acro{MSSM}[MSSM]{minimal supersymmetric standard model}
-\acro{SM}[SM]{standard model}
-\acro{SUSY}[SUSY]{supersymmetry}
+\chapter*{List of acronyms}
+\addcontentsline{toc}{chapter}{List of acronyms}
+\markboth{LIST OF ACRONYMS}{}
+\begin{acronym}
 \acro{2HDM}[2HDM]{two Higgs doublet model}
-\acro{ECAL}[ECAL]{electromagnetic calorimeter}
-\acro{HCAL}[HCAL]{hadron calorimeter}
-\acro{TIB}[TIB]{Tracker Inner Barrel}
-\acro{TID}[TID]{Tracker Inner Disk}
-\acro{TOB}[TOB]{Tracker Outer Barrel}
-\acro{TEC}[TEC]{Tracker EndCap}
-\acro{EB}[EB]{ECAL Barrel}
-\acro{EE}[EE]{ECAL Endcap}
-\acro{HB}[HB]{Hadron Barrel Calorimeter}
-\acro{HO}[HO]{Hadron Outer Calorimeter}
-\acro{HE}[HE]{Hadron Endcap Calorimeter}
-\acro{HF}[HF]{Hadron Forward Calorimeter}
-\acro{BSM}[BSM]{beyond the standard model}
-\acro{L1}[L1]{Level-1}
-\acro{HLT}[HLT]{High-level trigger}
-\acro{CSC}[CSC]{Cathode Strip Chamber}
-\acro{DT}[DT]{Drift Tube chamber}
-\acro{RPC}[RPC]{Resistive Plate Chamber}
-\acro{DAQ}[DAQ]{Data Acquisition}
-\acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
-\acro{RF}[RF]{radio frequency}
-\acro{PF}[PF]{particle flow}
 \acro{BDT}[BDT]{boosted decision tree}
-\acro{KF}[KF]{Kalman Filter}
-\acro{CTF}[CTF]{Combinatorial Track Finder}
-\acro{GSF}[GSF]{Gaussian Sum Filter}
-%\acro{KF}[KF]{Kalman Filter}
-\acro{DA}[DA]{Deterministic Annealing}
+\acro{BSM}[BSM]{beyond the standard model}
+\acro{CERN}[CERN]{the European Organisation for Nuclear Research }
 \acro{CHS}[CHS]{charged hadron subtraction}
-\acro{CSV}[CSV]{Combined Secondary Vertex}
+\acro{CKM}[CKM]{Cabibbo-Kobayashi-Maskawa}
 \acro{CL}[CL]{confidence level}
-\acro{IVF}[IVF]{Inclusive Vertex Finder}
-\acro{UE}[UE]{underlying event}
+\acro{CMS}[CMS]{Compact Muon Solenoid}
+\acro{CSC}[CSC]{cathode strip chamber}
+\acro{CSV}[CSV]{combined secondary certex}
+\acro{CTF}[CTF]{combinatorial track finder}
+\acro{DA}[DA]{deterministic annealing}
+\acro{DAQ}[DAQ]{aata acquisition}
+\acro{DT}[DT]{drift tube chamber}
+\acro{EB}[EB]{ECAL barrel}
+\acro{ECAL}[ECAL]{electromagnetic calorimeter}
+\acro{EE}[EE]{ECAL endcap}
+\acro{EM}[EM]{electromagnetic}
+\acro{GSF}[GSF]{gaussian sum filter}
+\acro{HB}[HB]{hadron barrel calorimeter}
+\acro{HCAL}[HCAL]{hadron calorimeter}
+\acro{HE}[HE]{hadron endcap calorimeter}
+\acro{HF}[HF]{hadron forward calorimeter}
+\acro{HLT}[HLT]{High-level trigger}
+\acro{HO}[HO]{hadron outer calorimeter}
+\acro{IVF}[IVF]{inclusive vertex finder}
+\acro{KF}[KF]{Kalman filter}
+\acro{L1}[L1]{Level-1}
+\acro{LEP}[LEP]{Large Electron-Positron}
+\acro{LHC}[LHC]{Large Hadron Collider}
+\acro{LS1}[LS1]{Long Shutdown 1}
+\acro{MC}[MC]{Monte Carlo}
 \acro{MPF}[MPF]{missing transverse energy projection fraction}
+\acro{MSSM}[MSSM]{minimal supersymmetric standard model}
+\acro{QCD}[QCD]{quantum chromodynamics}
+\acro{PF}[PF]{particle flow}
+\acro{PS}[PS]{Proton Synchrotron}
+\acro{PSB}[PSB]{Proton Synchrotron Booster}
+\acro{QED}[QED]{quantum electrodynamics}
+\acro{QFT}[QFT]{quantum field theory}
+\acro{RF}[RF]{radio frequency}
+\acro{RPC}[RPC]{pesistive plate chamber}
+\acro{SM}[SM]{standard model}
+\acro{SPS}[SPS]{Super Proton Synchrotron}
+\acro{SUSY}[SUSY]{supersymmetry}
+\acro{TEC}[TEC]{tracker endcap}
+\acro{TIB}[TIB]{tracker inner barrel}
+\acro{TID}[TID]{tracker inner disk}
+\acro{TOB}[TOB]{tracker outer barrel}
+\acro{UE}[UE]{underlying event}
+\acro{VBF}[VBF]{vector boson fusion}
+\acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
 \end{acronym}
 
 \appendix
