--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -32,8 +32,8 @@ Higgs bosons in the mass range of \mbox{$90\,\GeV$--$3.2\,\TeV$} directly decayi
 into pairs of tau leptons. 
 No significant excess is observed in any of the searches. Upper limits at the 95\% confidence 
 level are set on the cross section times branching ratio for the production of Higgs bosons in the MSSM.
-In addition, limits are set in the \mA-\tanb~parameter space of 
-several MSSM benchmark scenarios, and in the \cosba-\tanb~parameter space of 
+In addition, limits are set in the \mbox{\mA-\tanb}~parameter space of 
+several MSSM benchmark scenarios, and in the \mbox{\cosba-\tanb}~parameter space of 
 a two Higgs doublet model.
 
 \end{abstract}
@@ -48,13 +48,13 @@ directly from CMS publications. The `CMS Preliminary' label indicates figures wh
 have been made public via a preliminary public document or a public website, but are not
 included in a publication in a peer-reviewed journal. Figures labelled `CMS' or `CMS preliminary', 
 including those made by myself, include the relevant reference in the figure caption.
-The work for the analyses presented in chapters \ref{chap:hhh} and \ref{chap:mssm} was 
+The work for the analyses presented in chapters~\ref{chap:hhh} and \ref{chap:mssm} was 
 carried out as part of the CMS \Htotautau working group, and in collaboration with other members of the group.
 For the results presented in chapter \ref{chap:hhh} I contributed to the data analysis of two out of three
 final states presented in the final public result, and I 
 was responsible for the statistical inference. This included
 the interpretation of the results in MSSM and 2HDM benchmark scenarios. The 
-work is included in reference \cite{CMS-HIG-14-034}. For the results presented in chapter \ref{chap:mssm}
+work is included in reference \cite{CMS-HIG-14-034}. For the results presented in chapter~\ref{chap:mssm}
 I was responsible for all stages of the analysis, including the optimisation
 of object selection and event categorisation, as well as studies of background
 methods for three out of four channels in the public result of the analysis,
@@ -62,7 +62,7 @@ evaluation of systematic uncertainties in all four channels, and production of t
 results, including model interpretations. This work is included in the most recent
 preliminary result \cite{CMS-PAS-HIG-16-037}, as well as a predating preliminary
 result using a smaller dataset \cite{CMS-PAS-HIG-16-006}.
-The work presented in chapter \ref{sec:mssm_combination} has
+The work presented in chapter~\ref{sec:mssm_combination} has
 not been made public, and draws on the results of \cite{CMS-PAS-HIG-16-037} and \cite{CMS-PAS-HIG-16-006}.
 
   \begin{flushright}
