--- a/thesis.tex
+++ b/thesis.tex
@@ -15,6 +15,7 @@
 %\usepackage{mathpazo}
 %\usepackage{euler}
 \usepackage[pagewise,mathlines]{lineno}
+\usepackage[printonlyused]{acronym}
 %\linenumbers
 
 %% Put package includes etc. into preamble.tex for convenience
